# webview

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: build.yml
cmake/: webview.cmake
include/webview/: errors.h
include/webview/detail/: engine_base.h  engine_base.inl  exceptions.h  native_library.h  user_script.h
include/webview/detail/backends/: cocoa_webkit.h  gtk_webkitgtk.h  win32_edge.h
include/webview/detail/platform/windows/: com_init_wrapper.h  dpi.h  theme.h
include/webview/detail/platform/windows/webview2/: loader.h
src/: engine_base.cpp
src/backends/: win32_edge.cpp
